# flir_cap

./: CMakeLists.txt  README.md  appHandler.cpp  appHandler.h  captureDef.h  flirHandler.cpp  flirHandler.h  flirUtils.cpp  goFLIR  main.cpp  main1.cpp  newtils.cpp  sharedQueue.h  spinCamera.h
bk0306/: CMakeLists.txt  flirHandler.cpp  flirHandler.h  goFLIR  spinCamera.cpp  spinCamera.h
bk0306B/: appHandler.cpp  captureDef.h  flirHandler.cpp  flirUtils.cpp  flirUtils.h  goFLIR  spinCamera.cpp  spinManager.cpp  spinManager.h
bk0308/: appHandler.cpp  captureDef.h  flirHandler.cpp  goFLIR
bk0308B/: appHandler.cpp  flirHandler.cpp  flirHandler.h  goFLIR
callback/: callbackHandler.cpp  callbackHandler.h
config/: flirConfig.yaml  videoConfig.yaml
flir_ai/: CMakeLists.txt  Makefile_bk  flirutils.cpp  goFLIR
